--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.696.0",
     "bootstrap": "^4.5.0",
     "history": "^5.0.0",
+    "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
