--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "history": "^5.0.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.3.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router": "^3.2.6",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2"
   },
