--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-sdk": "^2.696.0",
+    "clean-css": ">=4.1.11",
     "bootstrap": "^4.5.0",
     "history": "^5.0.0",
     "material-ui": "^0.20.2",
