--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-sdk": "^2.696.0",
-    "clean-css": ">=4.1.11",
     "bootstrap": "^4.5.0",
+    "clean-css": ">=4.1.11",
     "history": "^5.0.0",
+    "material-table": "^1.62.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
