--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router": "^3.2.6",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
+    "react-s3-uploader-multipart": "^4.8.1",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2"
   },
@@ -43,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
