--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-sdk": "^2.696.0",
-    "clean-css": ">=4.1.11",
     "bootstrap": "^4.5.0",
+    "clean-css": ">=4.1.11",
     "history": "^5.0.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
@@ -23,7 +23,8 @@
     "react-s3": "^1.3.1",
     "react-s3-uploader-multipart": "^4.8.1",
     "react-scripts": "3.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
